// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot on "DESKTOP" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(NavigationBar)>
      <NavigationBar
        authUser={Object {}}
        dispatch={[Function]}
      >
        <Responsiveness
          desktop={
            <NavigationBarDesktop
              authUser={Object {}}
              dispatch={[Function]}
              loadFadeIn={false}
            />
          }
          mobile={
            <NavigationBarMobile
              authUser={Object {}}
              dispatch={[Function]}
            />
          }
        >
          <Desktop>
            <NavigationBarDesktop
              authUser={Object {}}
              dispatch={[Function]}
              loadFadeIn={false}
            >
              <Navbar
                className="px-5 py-3 navigation-bar"
                collapseOnSelect={false}
                expand="lg"
                fixed="top"
                variant="dark"
              >
                <nav
                  className="px-5 py-3 navigation-bar navbar navbar-expand-lg navbar-dark fixed-top"
                >
                  <NavbarBrand
                    as={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "displayName": "Link",
                        "propTypes": Object {
                          "innerRef": [Function],
                          "onClick": [Function],
                          "replace": [Function],
                          "target": [Function],
                          "to": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    className="pl-5 ml-5"
                    to="/"
                  >
                    <Link
                      className="pl-5 ml-5 navbar-brand"
                      to="/"
                    >
                      <LinkAnchor
                        className="pl-5 ml-5 navbar-brand"
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          className="pl-5 ml-5 navbar-brand"
                          href="/"
                          onClick={[Function]}
                        >
                          <LightNinjaPrepLogo
                            height={40}
                            width={100}
                          >
                            <svg
                              height={40}
                              viewBox="0 0 200 57"
                              width={100}
                            >
                              <g
                                data-name="Group 120"
                                id="Group_120"
                                transform="translate(-1157 -10208)"
                              >
                                <text
                                  fill="#f9fbfd"
                                  fontFamily="SourceSansPro-Bold, Source Sans Pro"
                                  fontSize="40"
                                  fontWeight="700"
                                  id="NinjaPrep"
                                  transform="translate(1157 10249)"
                                >
                                  <tspan
                                    x="0"
                                    y="0"
                                  >
                                    NinjaPrep
                                  </tspan>
                                </text>
                                <circle
                                  cx="7.5"
                                  cy="7.5"
                                  data-name="Ellipse 44"
                                  fill="#25d0f3"
                                  id="Ellipse_44"
                                  r="7.5"
                                  transform="translate(1342 10237)"
                                />
                              </g>
                            </svg>
                          </LightNinjaPrepLogo>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </NavbarBrand>
                  <NavbarToggle
                    label="Toggle navigation"
                  >
                    <button
                      aria-label="Toggle navigation"
                      className="navbar-toggler collapsed"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="navbar-toggler-icon"
                      />
                    </button>
                  </NavbarToggle>
                  <div
                    className="w-100"
                  >
                    <NavbarCollapse>
                      <ForwardRef
                        appear={false}
                        getDimensionValue={[Function]}
                        in={false}
                        mountOnEnter={false}
                        timeout={300}
                        unmountOnExit={false}
                      >
                        <Transition
                          addEndListener={[Function]}
                          appear={false}
                          aria-expanded={null}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={300}
                          unmountOnExit={false}
                        >
                          <div
                            aria-expanded={null}
                            className="navbar-collapse collapse"
                          >
                            <Nav
                              className="ml-auto pr-5 mr-5"
                              fill={false}
                              justify={false}
                            >
                              <ForwardRef
                                as="div"
                                className="ml-auto pr-5 mr-5 navbar-nav"
                                onSelect={[Function]}
                              >
                                <div
                                  className="ml-auto pr-5 mr-5 navbar-nav"
                                  onKeyDown={[Function]}
                                >
                                  <Connect(NavigationBar)>
                                    <NavigationBar
                                      dispatch={[Function]}
                                      isPremiumUser={false}
                                    >
                                      <NavLinks
                                        isPremiumUser={false}
                                      >
                                        <styled.a
                                          as={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "displayName": "Link",
                                              "propTypes": Object {
                                                "innerRef": [Function],
                                                "onClick": [Function],
                                                "replace": [Function],
                                                "target": [Function],
                                                "to": [Function],
                                              },
                                              "render": [Function],
                                            }
                                          }
                                          to="/premium"
                                        >
                                          <Link
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            to="/premium"
                                          >
                                            <LinkAnchor
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/premium"
                                              navigate={[Function]}
                                            >
                                              <a
                                                className="sc-bdnxRM bWMeOf pl-3"
                                                href="/premium"
                                                onClick={[Function]}
                                              >
                                                Get Premium
                                              </a>
                                            </LinkAnchor>
                                          </Link>
                                        </styled.a>
                                        <styled.a
                                          as={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "displayName": "Link",
                                              "propTypes": Object {
                                                "innerRef": [Function],
                                                "onClick": [Function],
                                                "replace": [Function],
                                                "target": [Function],
                                                "to": [Function],
                                              },
                                              "render": [Function],
                                            }
                                          }
                                          to="/challenges"
                                        >
                                          <Link
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            to="/challenges"
                                          >
                                            <LinkAnchor
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/challenges"
                                              navigate={[Function]}
                                            >
                                              <a
                                                className="sc-bdnxRM bWMeOf pl-3"
                                                href="/challenges"
                                                onClick={[Function]}
                                              >
                                                Challenges
                                              </a>
                                            </LinkAnchor>
                                          </Link>
                                        </styled.a>
                                        <styled.a
                                          as={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "displayName": "Link",
                                              "propTypes": Object {
                                                "innerRef": [Function],
                                                "onClick": [Function],
                                                "replace": [Function],
                                                "target": [Function],
                                                "to": [Function],
                                              },
                                              "render": [Function],
                                            }
                                          }
                                          to="/about"
                                        >
                                          <Link
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            to="/about"
                                          >
                                            <LinkAnchor
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/about"
                                              navigate={[Function]}
                                            >
                                              <a
                                                className="sc-bdnxRM bWMeOf pl-3"
                                                href="/about"
                                                onClick={[Function]}
                                              >
                                                Meet the Team
                                              </a>
                                            </LinkAnchor>
                                          </Link>
                                        </styled.a>
                                      </NavLinks>
                                    </NavigationBar>
                                  </Connect(NavigationBar)>
                                  <ProfileDropdown
                                    authUser={Object {}}
                                    dispatch={[Function]}
                                    loadFadeIn={false}
                                    toggleModal={[Function]}
                                  >
                                    <DropdownMenu
                                      user={Object {}}
                                    >
                                      <Dropdown
                                        className="pl-3"
                                        navbar={false}
                                      >
                                        <ReactOverlaysDropdown
                                          itemSelector=".dropdown-item:not(.disabled):not(:disabled)"
                                          onToggle={[Function]}
                                        >
                                          <div
                                            className="pl-3 dropdown"
                                          >
                                            <DropdownToggle
                                              as={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "render": [Function],
                                                }
                                              }
                                            >
                                              <ForwardRef
                                                aria-expanded={false}
                                                aria-haspopup={true}
                                                className="dropdown-toggle"
                                                onClick={[Function]}
                                              >
                                                <a
                                                  href="#"
                                                  onClick={[Function]}
                                                >
                                                  <Image
                                                    alt="ProfilePhoto"
                                                    className="profile-picture"
                                                    fluid={false}
                                                    rounded={false}
                                                    roundedCircle={true}
                                                    thumbnail={false}
                                                  >
                                                    <img
                                                      alt="ProfilePhoto"
                                                      className="profile-picture rounded-circle"
                                                    />
                                                  </Image>
                                                </a>
                                              </ForwardRef>
                                            </DropdownToggle>
                                            <DropdownMenu
                                              align="left"
                                              alignRight={false}
                                              flip={true}
                                            />
                                          </div>
                                        </ReactOverlaysDropdown>
                                      </Dropdown>
                                    </DropdownMenu>
                                  </ProfileDropdown>
                                </div>
                              </ForwardRef>
                            </Nav>
                          </div>
                        </Transition>
                      </ForwardRef>
                    </NavbarCollapse>
                  </div>
                  <LoginModalDesktop
                    showModal={false}
                    toggleModal={[Function]}
                  >
                    <Modal
                      animation={true}
                      autoFocus={true}
                      backdrop={true}
                      centered={true}
                      dialogAs={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "displayName": "ModalDialog",
                          "render": [Function],
                        }
                      }
                      enforceFocus={true}
                      keyboard={true}
                      onHide={[Function]}
                      restoreFocus={true}
                      show={false}
                    >
                      <Modal
                        autoFocus={true}
                        backdrop={true}
                        backdropTransition={[Function]}
                        containerClassName="modal-open"
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          BootstrapModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                            "scrollbarSize": 0,
                          }
                        }
                        onEnter={[Function]}
                        onEntering={[Function]}
                        onEscapeKeyDown={[Function]}
                        onExit={[Function]}
                        onExited={[Function]}
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        renderDialog={[Function]}
                        restoreFocus={true}
                        show={false}
                        transition={[Function]}
                      />
                    </Modal>
                  </LoginModalDesktop>
                </nav>
              </Navbar>
            </NavigationBarDesktop>
          </Desktop>
          <Mobile />
        </Responsiveness>
      </NavigationBar>
    </Connect(NavigationBar)>
  </Router>
</Provider>
`;

exports[`matches snapshot on "MOBILE" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(NavigationBar)>
      <NavigationBar
        authUser={Object {}}
        dispatch={[Function]}
      >
        <Responsiveness
          desktop={
            <NavigationBarDesktop
              authUser={Object {}}
              dispatch={[Function]}
              loadFadeIn={false}
            />
          }
          mobile={
            <NavigationBarMobile
              authUser={Object {}}
              dispatch={[Function]}
            />
          }
        >
          <Desktop />
          <Mobile>
            <NavigationBarMobile
              authUser={Object {}}
              dispatch={[Function]}
            >
              <Navbar
                className="pr-5 pl-2 py-3 navigation-bar"
                collapseOnSelect={false}
                expand="lg"
                fixed="top"
                variant="dark"
              >
                <nav
                  className="pr-5 pl-2 py-3 navigation-bar navbar navbar-expand-lg navbar-dark fixed-top"
                >
                  <NavbarBrand
                    as={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "displayName": "Link",
                        "propTypes": Object {
                          "innerRef": [Function],
                          "onClick": [Function],
                          "replace": [Function],
                          "target": [Function],
                          "to": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    className="pl-5 ml-5"
                    to="/"
                  >
                    <Link
                      className="pl-5 ml-5 navbar-brand"
                      to="/"
                    >
                      <LinkAnchor
                        className="pl-5 ml-5 navbar-brand"
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          className="pl-5 ml-5 navbar-brand"
                          href="/"
                          onClick={[Function]}
                        >
                          <LightNinjaPrepLogo
                            height={40}
                            width={100}
                          >
                            <svg
                              height={40}
                              viewBox="0 0 200 57"
                              width={100}
                            >
                              <g
                                data-name="Group 120"
                                id="Group_120"
                                transform="translate(-1157 -10208)"
                              >
                                <text
                                  fill="#f9fbfd"
                                  fontFamily="SourceSansPro-Bold, Source Sans Pro"
                                  fontSize="40"
                                  fontWeight="700"
                                  id="NinjaPrep"
                                  transform="translate(1157 10249)"
                                >
                                  <tspan
                                    x="0"
                                    y="0"
                                  >
                                    NinjaPrep
                                  </tspan>
                                </text>
                                <circle
                                  cx="7.5"
                                  cy="7.5"
                                  data-name="Ellipse 44"
                                  fill="#25d0f3"
                                  id="Ellipse_44"
                                  r="7.5"
                                  transform="translate(1342 10237)"
                                />
                              </g>
                            </svg>
                          </LightNinjaPrepLogo>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </NavbarBrand>
                  <NavbarToggle
                    aria-controls="basic-navbar-nav"
                    label="Toggle navigation"
                  >
                    <button
                      aria-controls="basic-navbar-nav"
                      aria-label="Toggle navigation"
                      className="navbar-toggler collapsed"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="navbar-toggler-icon"
                      />
                    </button>
                  </NavbarToggle>
                  <NavbarCollapse
                    id="basic-navbar-nav"
                  >
                    <ForwardRef
                      appear={false}
                      getDimensionValue={[Function]}
                      id="basic-navbar-nav"
                      in={false}
                      mountOnEnter={false}
                      timeout={300}
                      unmountOnExit={false}
                    >
                      <Transition
                        addEndListener={[Function]}
                        appear={false}
                        aria-expanded={null}
                        enter={true}
                        exit={true}
                        id="basic-navbar-nav"
                        in={false}
                        mountOnEnter={false}
                        onEnter={[Function]}
                        onEntered={[Function]}
                        onEntering={[Function]}
                        onExit={[Function]}
                        onExited={[Function]}
                        onExiting={[Function]}
                        timeout={300}
                        unmountOnExit={false}
                      >
                        <div
                          aria-expanded={null}
                          className="navbar-collapse collapse"
                          id="basic-navbar-nav"
                        >
                          <Nav
                            fill={false}
                            justify={false}
                          >
                            <ForwardRef
                              as="div"
                              className="navbar-nav"
                              onSelect={[Function]}
                            >
                              <div
                                className="navbar-nav"
                                onKeyDown={[Function]}
                              >
                                <Connect(NavigationBar)>
                                  <NavigationBar
                                    dispatch={[Function]}
                                    isPremiumUser={false}
                                  >
                                    <NavLinks
                                      isPremiumUser={false}
                                    >
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/premium"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/premium"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/premium"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/premium"
                                              onClick={[Function]}
                                            >
                                              Get Premium
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/challenges"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/challenges"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/challenges"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/challenges"
                                              onClick={[Function]}
                                            >
                                              Challenges
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/about"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/about"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/about"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/about"
                                              onClick={[Function]}
                                            >
                                              Meet the Team
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                    </NavLinks>
                                  </NavigationBar>
                                </Connect(NavigationBar)>
                                <ProfileDropdown
                                  authUser={Object {}}
                                  dispatch={[Function]}
                                  toggleModal={[Function]}
                                >
                                  <DropdownMenu
                                    user={Object {}}
                                  >
                                    <Dropdown
                                      className="pl-3"
                                      navbar={false}
                                    >
                                      <ReactOverlaysDropdown
                                        itemSelector=".dropdown-item:not(.disabled):not(:disabled)"
                                        onToggle={[Function]}
                                      >
                                        <div
                                          className="pl-3 dropdown"
                                        >
                                          <DropdownToggle
                                            as={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "render": [Function],
                                              }
                                            }
                                          >
                                            <ForwardRef
                                              aria-expanded={false}
                                              aria-haspopup={true}
                                              className="dropdown-toggle"
                                              onClick={[Function]}
                                            >
                                              <a
                                                href="#"
                                                onClick={[Function]}
                                              >
                                                <Image
                                                  alt="ProfilePhoto"
                                                  className="profile-picture"
                                                  fluid={false}
                                                  rounded={false}
                                                  roundedCircle={true}
                                                  thumbnail={false}
                                                >
                                                  <img
                                                    alt="ProfilePhoto"
                                                    className="profile-picture rounded-circle"
                                                  />
                                                </Image>
                                              </a>
                                            </ForwardRef>
                                          </DropdownToggle>
                                          <DropdownMenu
                                            align="left"
                                            alignRight={false}
                                            flip={true}
                                          />
                                        </div>
                                      </ReactOverlaysDropdown>
                                    </Dropdown>
                                  </DropdownMenu>
                                </ProfileDropdown>
                              </div>
                            </ForwardRef>
                          </Nav>
                          <LoginModalMobile
                            authUser={Object {}}
                            dispatch={[Function]}
                            showModal={false}
                            toggleModal={[Function]}
                          >
                            <Modal
                              animation={true}
                              autoFocus={true}
                              backdrop={true}
                              centered={true}
                              className="px-5"
                              dialogAs={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "displayName": "ModalDialog",
                                  "render": [Function],
                                }
                              }
                              enforceFocus={true}
                              keyboard={true}
                              onHide={[Function]}
                              restoreFocus={true}
                              show={false}
                            >
                              <Modal
                                autoFocus={true}
                                backdrop={true}
                                backdropTransition={[Function]}
                                containerClassName="modal-open"
                                enforceFocus={true}
                                keyboard={true}
                                manager={
                                  BootstrapModalManager {
                                    "containers": Array [],
                                    "data": Array [],
                                    "handleContainerOverflow": true,
                                    "hideSiblingNodes": true,
                                    "modals": Array [],
                                    "scrollbarSize": 0,
                                  }
                                }
                                onEnter={[Function]}
                                onEntering={[Function]}
                                onEscapeKeyDown={[Function]}
                                onExit={[Function]}
                                onExited={[Function]}
                                onHide={[Function]}
                                renderBackdrop={[Function]}
                                renderDialog={[Function]}
                                restoreFocus={true}
                                show={false}
                                transition={[Function]}
                              />
                            </Modal>
                          </LoginModalMobile>
                        </div>
                      </Transition>
                    </ForwardRef>
                  </NavbarCollapse>
                </nav>
              </Navbar>
            </NavigationBarMobile>
          </Mobile>
        </Responsiveness>
      </NavigationBar>
    </Connect(NavigationBar)>
  </Router>
</Provider>
`;

exports[`matches snapshot on "TABLET" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(NavigationBar)>
      <NavigationBar
        authUser={Object {}}
        dispatch={[Function]}
      >
        <Responsiveness
          desktop={
            <NavigationBarDesktop
              authUser={Object {}}
              dispatch={[Function]}
              loadFadeIn={false}
            />
          }
          mobile={
            <NavigationBarMobile
              authUser={Object {}}
              dispatch={[Function]}
            />
          }
        >
          <Desktop />
          <Mobile>
            <NavigationBarMobile
              authUser={Object {}}
              dispatch={[Function]}
            >
              <Navbar
                className="pr-5 pl-2 py-3 navigation-bar"
                collapseOnSelect={false}
                expand="lg"
                fixed="top"
                variant="dark"
              >
                <nav
                  className="pr-5 pl-2 py-3 navigation-bar navbar navbar-expand-lg navbar-dark fixed-top"
                >
                  <NavbarBrand
                    as={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "displayName": "Link",
                        "propTypes": Object {
                          "innerRef": [Function],
                          "onClick": [Function],
                          "replace": [Function],
                          "target": [Function],
                          "to": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    className="pl-5 ml-5"
                    to="/"
                  >
                    <Link
                      className="pl-5 ml-5 navbar-brand"
                      to="/"
                    >
                      <LinkAnchor
                        className="pl-5 ml-5 navbar-brand"
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          className="pl-5 ml-5 navbar-brand"
                          href="/"
                          onClick={[Function]}
                        >
                          <LightNinjaPrepLogo
                            height={40}
                            width={100}
                          >
                            <svg
                              height={40}
                              viewBox="0 0 200 57"
                              width={100}
                            >
                              <g
                                data-name="Group 120"
                                id="Group_120"
                                transform="translate(-1157 -10208)"
                              >
                                <text
                                  fill="#f9fbfd"
                                  fontFamily="SourceSansPro-Bold, Source Sans Pro"
                                  fontSize="40"
                                  fontWeight="700"
                                  id="NinjaPrep"
                                  transform="translate(1157 10249)"
                                >
                                  <tspan
                                    x="0"
                                    y="0"
                                  >
                                    NinjaPrep
                                  </tspan>
                                </text>
                                <circle
                                  cx="7.5"
                                  cy="7.5"
                                  data-name="Ellipse 44"
                                  fill="#25d0f3"
                                  id="Ellipse_44"
                                  r="7.5"
                                  transform="translate(1342 10237)"
                                />
                              </g>
                            </svg>
                          </LightNinjaPrepLogo>
                        </a>
                      </LinkAnchor>
                    </Link>
                  </NavbarBrand>
                  <NavbarToggle
                    aria-controls="basic-navbar-nav"
                    label="Toggle navigation"
                  >
                    <button
                      aria-controls="basic-navbar-nav"
                      aria-label="Toggle navigation"
                      className="navbar-toggler collapsed"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="navbar-toggler-icon"
                      />
                    </button>
                  </NavbarToggle>
                  <NavbarCollapse
                    id="basic-navbar-nav"
                  >
                    <ForwardRef
                      appear={false}
                      getDimensionValue={[Function]}
                      id="basic-navbar-nav"
                      in={false}
                      mountOnEnter={false}
                      timeout={300}
                      unmountOnExit={false}
                    >
                      <Transition
                        addEndListener={[Function]}
                        appear={false}
                        aria-expanded={null}
                        enter={true}
                        exit={true}
                        id="basic-navbar-nav"
                        in={false}
                        mountOnEnter={false}
                        onEnter={[Function]}
                        onEntered={[Function]}
                        onEntering={[Function]}
                        onExit={[Function]}
                        onExited={[Function]}
                        onExiting={[Function]}
                        timeout={300}
                        unmountOnExit={false}
                      >
                        <div
                          aria-expanded={null}
                          className="navbar-collapse collapse"
                          id="basic-navbar-nav"
                        >
                          <Nav
                            fill={false}
                            justify={false}
                          >
                            <ForwardRef
                              as="div"
                              className="navbar-nav"
                              onSelect={[Function]}
                            >
                              <div
                                className="navbar-nav"
                                onKeyDown={[Function]}
                              >
                                <Connect(NavigationBar)>
                                  <NavigationBar
                                    dispatch={[Function]}
                                    isPremiumUser={false}
                                  >
                                    <NavLinks
                                      isPremiumUser={false}
                                    >
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/premium"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/premium"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/premium"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/premium"
                                              onClick={[Function]}
                                            >
                                              Get Premium
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/challenges"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/challenges"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/challenges"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/challenges"
                                              onClick={[Function]}
                                            >
                                              Challenges
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                      <styled.a
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        to="/about"
                                      >
                                        <Link
                                          className="sc-bdnxRM bWMeOf pl-3"
                                          to="/about"
                                        >
                                          <LinkAnchor
                                            className="sc-bdnxRM bWMeOf pl-3"
                                            href="/about"
                                            navigate={[Function]}
                                          >
                                            <a
                                              className="sc-bdnxRM bWMeOf pl-3"
                                              href="/about"
                                              onClick={[Function]}
                                            >
                                              Meet the Team
                                            </a>
                                          </LinkAnchor>
                                        </Link>
                                      </styled.a>
                                    </NavLinks>
                                  </NavigationBar>
                                </Connect(NavigationBar)>
                                <ProfileDropdown
                                  authUser={Object {}}
                                  dispatch={[Function]}
                                  toggleModal={[Function]}
                                >
                                  <DropdownMenu
                                    user={Object {}}
                                  >
                                    <Dropdown
                                      className="pl-3"
                                      navbar={false}
                                    >
                                      <ReactOverlaysDropdown
                                        itemSelector=".dropdown-item:not(.disabled):not(:disabled)"
                                        onToggle={[Function]}
                                      >
                                        <div
                                          className="pl-3 dropdown"
                                        >
                                          <DropdownToggle
                                            as={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "render": [Function],
                                              }
                                            }
                                          >
                                            <ForwardRef
                                              aria-expanded={false}
                                              aria-haspopup={true}
                                              className="dropdown-toggle"
                                              onClick={[Function]}
                                            >
                                              <a
                                                href="#"
                                                onClick={[Function]}
                                              >
                                                <Image
                                                  alt="ProfilePhoto"
                                                  className="profile-picture"
                                                  fluid={false}
                                                  rounded={false}
                                                  roundedCircle={true}
                                                  thumbnail={false}
                                                >
                                                  <img
                                                    alt="ProfilePhoto"
                                                    className="profile-picture rounded-circle"
                                                  />
                                                </Image>
                                              </a>
                                            </ForwardRef>
                                          </DropdownToggle>
                                          <DropdownMenu
                                            align="left"
                                            alignRight={false}
                                            flip={true}
                                          />
                                        </div>
                                      </ReactOverlaysDropdown>
                                    </Dropdown>
                                  </DropdownMenu>
                                </ProfileDropdown>
                              </div>
                            </ForwardRef>
                          </Nav>
                          <LoginModalMobile
                            authUser={Object {}}
                            dispatch={[Function]}
                            showModal={false}
                            toggleModal={[Function]}
                          >
                            <Modal
                              animation={true}
                              autoFocus={true}
                              backdrop={true}
                              centered={true}
                              className="px-5"
                              dialogAs={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "displayName": "ModalDialog",
                                  "render": [Function],
                                }
                              }
                              enforceFocus={true}
                              keyboard={true}
                              onHide={[Function]}
                              restoreFocus={true}
                              show={false}
                            >
                              <Modal
                                autoFocus={true}
                                backdrop={true}
                                backdropTransition={[Function]}
                                containerClassName="modal-open"
                                enforceFocus={true}
                                keyboard={true}
                                manager={
                                  BootstrapModalManager {
                                    "containers": Array [],
                                    "data": Array [],
                                    "handleContainerOverflow": true,
                                    "hideSiblingNodes": true,
                                    "modals": Array [],
                                    "scrollbarSize": 0,
                                  }
                                }
                                onEnter={[Function]}
                                onEntering={[Function]}
                                onEscapeKeyDown={[Function]}
                                onExit={[Function]}
                                onExited={[Function]}
                                onHide={[Function]}
                                renderBackdrop={[Function]}
                                renderDialog={[Function]}
                                restoreFocus={true}
                                show={false}
                                transition={[Function]}
                              />
                            </Modal>
                          </LoginModalMobile>
                        </div>
                      </Transition>
                    </ForwardRef>
                  </NavbarCollapse>
                </nav>
              </Navbar>
            </NavigationBarMobile>
          </Mobile>
        </Responsiveness>
      </NavigationBar>
    </Connect(NavigationBar)>
  </Router>
</Provider>
`;
